--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 This is the first html file working on git
 sndfvdhfjhsfjhdfsjj
 i am adding one more line
-
+dvcdhsfsdhfsfjhfvjhs
 i have add my file 
 
 creadted local copy
 ahdgajhfgfjhafga
 dffvdfhdgfsdh
 jsdhdsjkfhdfjkshfjkd
-sdvfdsvsdfgsdfgs
-sfvsdfgvsfgvsfgv
